--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -539,7 +539,7 @@
                             }
                         </style>
                         
-                        <script>
+                        <script t-if="with_links">
                             $( document ).ready(function() {
                                 (async () => {
                                 
