--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -543,6 +543,8 @@
                             $( document ).ready(function() {
                                 (async () => {
                                 
+                                    $("html").attr("lang", "en");
+                                    
                                     speechModule.deactivate();
                                 
                                 })();
