--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -672,8 +672,8 @@
                             
                             <br/>
                             
-                            <h3 t-if="with_links">Visit our Blockchain dApp:<br/>
-                            <a href="https://latinchain.pinet.com/">https://latinchain.pinet.com/</a></h3>
+                            <!--<h3 t-if="with_links">Visit our Blockchain dApp:<br/>
+                            <a href="https://latinchain.pinet.com/" target="_blank">https://latinchain.pinet.com/</a></h3>-->
                             <h3 t-if="with_links">From Venezuela you can use mailboxes to import from the USA (find your own in your country): Zoom, Telocomproenusa, etc.</h3>
                             <h3 t-if="not with_links">Udemy courses, Amazon Books.</h3>
                             <h3 t-elif="with_links" id="share-message-1">Buying point: Spring clothing, Amazon best sellers and deals, Udemy courses, Amazon Books. Shipping worldwide.</h3>
