--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -753,11 +753,11 @@
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4qtGwTz" target="_blank" class="btn btn-link amazon-list"><strong>Deals in Amazon</strong></a>
+                                                <a href="https://amzn.to/4aCIL19" target="_blank" class="btn btn-link amazon-list"><strong>Deals in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4qyWZpG" target="_blank" class="btn btn-link amazon-list"><strong>Computers and Accessories Deals in Amazon</strong></a>
+                                                <a href="https://amzn.to/4qA29Sg" target="_blank" class="btn btn-link amazon-list"><strong>Computers and Accessories Deals in Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
