--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -745,6 +745,10 @@
                                         <h3 class="col-12">
                                             <div class="product">
                                                 <hr/>
+                                                <a href="https://amzn.to/3O9C5jD" target="_blank" class="btn btn-link amazon-list"><strong>Prefabricated Portable House in Amazon</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
                                                 <a href="https://amzn.to/4afSc7M" target="_blank" class="btn btn-link amazon-list"><strong>FIFA World Cup 2026 Products in Amazon</strong></a>
                                             </div>
                                             <div class="product">
