--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -733,7 +733,7 @@
                             <div t-if="with_links" class="amazon-best-deals">
                                 <br/>
                                 <div style="margin-bottom:5px; padding:5px" class="border border-top-0">
-                                    <h3>Todays's Best Products in Amazon:</h3>
+                                    <h3>Todays's Best Products on Amazon:</h3>
                                 </div>
                                 <div style="padding:10px;" class="border-gradient-rounded">
                                     <div class="row">
@@ -745,87 +745,87 @@
                                         <h3 class="col-12">
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/3O9C5jD" target="_blank" class="btn btn-link amazon-list"><strong>Prefabricated Portable House in Amazon</strong></a>
+                                                <a href="https://amzn.to/3O9C5jD" target="_blank" class="btn btn-link amazon-list"><strong>Prefabricated Portable House on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4afSc7M" target="_blank" class="btn btn-link amazon-list"><strong>FIFA World Cup 2026 Products in Amazon</strong></a>
+                                                <a href="https://amzn.to/4afSc7M" target="_blank" class="btn btn-link amazon-list"><strong>FIFA World Cup 2026 Products on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4tC5XoG" target="_blank" class="btn btn-link amazon-list"><strong>FIFA World Cup 2026 Soccer Ball in Amazon</strong></a>
+                                                <a href="https://amzn.to/4tC5XoG" target="_blank" class="btn btn-link amazon-list"><strong>FIFA World Cup 2026 Soccer Ball on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4aCIL19" target="_blank" class="btn btn-link amazon-list"><strong>Deals in Amazon</strong></a>
+                                                <a href="https://amzn.to/4aCIL19" target="_blank" class="btn btn-link amazon-list"><strong>Deals on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4qA29Sg" target="_blank" class="btn btn-link amazon-list"><strong>Computers and Accessories Deals in Amazon</strong></a>
+                                                <a href="https://amzn.to/4qA29Sg" target="_blank" class="btn btn-link amazon-list"><strong>Computers and Accessories Deals on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4qAnISU" target="_blank" class="btn btn-link amazon-list"><strong>Electronic Deals in Amazon</strong></a>
+                                                <a href="https://amzn.to/4qAnISU" target="_blank" class="btn btn-link amazon-list"><strong>Electronic Deals on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/3OdrLHb" target="_blank" class="btn btn-link amazon-list"><strong>Cellphones and Accessories Deals in Amazon</strong></a>
+                                                <a href="https://amzn.to/3OdrLHb" target="_blank" class="btn btn-link amazon-list"><strong>Cellphones and Accessories Deals on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/3MD2CVX" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Deals in Amazon</strong></a>
+                                                <a href="https://amzn.to/3MD2CVX" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Deals on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4rNEYow" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Nike in Amazon</strong></a>
+                                                <a href="https://amzn.to/4rNEYow" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Nike on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/3OEodOe" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Adidas in Amazon</strong></a>
+                                                <a href="https://amzn.to/3OEodOe" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Adidas on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/3MlJawT" target="_blank" class="btn btn-link amazon-list"><strong>Shoes PUMA in Amazon</strong></a>
+                                                <a href="https://amzn.to/3MlJawT" target="_blank" class="btn btn-link amazon-list"><strong>Shoes PUMA on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4tHBuG7" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Under Armour in Amazon</strong></a>
+                                                <a href="https://amzn.to/4tHBuG7" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Under Armour on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4rjKAXY" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Reebok in Amazon</strong></a>
+                                                <a href="https://amzn.to/4rjKAXY" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Reebok on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4rd5bgn" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Skechers in Amazon</strong></a>
+                                                <a href="https://amzn.to/4rd5bgn" target="_blank" class="btn btn-link amazon-list"><strong>Shoes Skechers on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4bTwBmS" target="_blank" class="btn btn-link amazon-list"><strong>Shoes New Balance in Amazon</strong></a>
+                                                <a href="https://amzn.to/4bTwBmS" target="_blank" class="btn btn-link amazon-list"><strong>Shoes New Balance on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4axQdKW" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers in Amazon</strong></a>
+                                                <a href="https://amzn.to/4axQdKW" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/3OG9xOD" target="_blank" class="btn btn-link amazon-list"><strong>New Releases in Amazon</strong></a>
+                                                <a href="https://amzn.to/3OG9xOD" target="_blank" class="btn btn-link amazon-list"><strong>New Releases on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4kxuw2h" target="_blank" class="btn btn-link amazon-list"><strong>Move and Shakers in Amazon</strong></a>
+                                                <a href="https://amzn.to/4kxuw2h" target="_blank" class="btn btn-link amazon-list"><strong>Move and Shakers on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/3MD31Yt" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Computers and Accessories in Amazon</strong></a>
+                                                <a href="https://amzn.to/3MD31Yt" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Computers and Accessories on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4bTtISV" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Electronics in Amazon</strong></a>
+                                                <a href="https://amzn.to/4bTtISV" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Electronics on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/40eftAV" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Cellphones and Accessories in Amazon</strong></a>
+                                                <a href="https://amzn.to/40eftAV" target="_blank" class="btn btn-link amazon-list"><strong>Best Sellers Cellphones and Accessories on Amazon</strong></a>
                                                 <hr/>
                                             </div>
                                         </h3>
