--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -745,7 +745,7 @@
                                         <h3 class="col-12">
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/3O9C5jD" target="_blank" class="btn btn-link amazon-list"><strong>Prefabricated Portable House on Amazon</strong></a>
+                                                <a href="https://amzn.to/3O9C5jD" target="_blank" class="btn btn-link amazon-list"><strong>Prefabricated Portable Houses on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
