--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -733,7 +733,7 @@
                             <div t-if="with_links" class="amazon-best-deals">
                                 <br/>
                                 <div style="margin-bottom:5px; padding:5px" class="border border-top-0">
-                                    <h3>Todays's Best Products on Amazon:</h3>
+                                    <h3>Todays's Best Products on Amazon (as Amazon Associate I earn from qualifying purchases):</h3>
                                 </div>
                                 <div style="padding:10px;" class="border-gradient-rounded">
                                     <div class="row">
@@ -743,6 +743,14 @@
                                     </div>
                                     <div class="row" style="margin-top: 10px">
                                         <h3 class="col-12">
+                                            <div class="product">
+                                                <hr/>
+                                                <a href="https://amzn.to/4avhNZ7" target="_blank" class="btn btn-link amazon-list"><strong>Video Games on Amazon</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
+                                                <a href="https://amzn.to/4cvWHfK" target="_blank" class="btn btn-link amazon-list"><strong>Video Games Consoles on Amazon</strong></a>
+                                            </div>
                                             <div class="product">
                                                 <hr/>
                                                 <a href="https://amzn.to/3O9C5jD" target="_blank" class="btn btn-link amazon-list"><strong>Prefabricated Portable Houses on Amazon</strong></a>
