--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -733,7 +733,7 @@
                             <div t-if="with_links" class="amazon-best-deals">
                                 <br/>
                                 <div style="margin-bottom:5px; padding:5px" class="border border-top-0">
-                                    <h3>Todays's Best Products on Amazon (as Amazon Associate I earn from qualifying purchases):</h3>
+                                    <h3>Todays's Best Products on Amazon (as Amazon Associate I earn from qualifying purchases - Como afiliado de Amazon, percibo ganancias con las compras elegibles):</h3>
                                 </div>
                                 <div style="padding:10px;" class="border-gradient-rounded">
                                     <div class="row">
