--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mahjong.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mahjong.xml
@@ -87,9 +87,10 @@
                 </head>
 
                 <body bgcolor="#ffffff" style="text-align: center; max-height: 120% !important;">
-                    <header>Mahjong solitaire</header>
                     
-                    <a id="back" class="btn btn-info back" style="margin-bottom:15px;" href="/"><i class="fa fa-step-backward"></i></a>
+                    <a id="back" class="btn btn-info back" style="margin-top:15px;" href="/"><i class="fa fa-step-backward"></i></a>
+                    
+                    <header>Mahjong solitaire</header>
 
                     <div id="wrapper">
                         <main>
