--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -745,7 +745,7 @@
                                         <h3 class="col-12">
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://www.amazon.com/dp/B0D73FQTHQ?ref=t_ac_view_request_product_image&amp;campaignId=amzn1.campaign.68MPXAEHFGC0&amp;linkCode=tr1&amp;tag=latinchain0d-20&amp;linkId=amzn1.campaign.68MPXAEHFGC0_1771337661156" target="_blank" class="btn btn-link amazon-list"><strong>DOOGE S200 5G Rugged Phone (all-terrain, ultra-resistant) on Amazon</strong></a>
+                                                <a href="https://www.amazon.com/dp/B0D73FQTHQ?ref=t_ac_view_request_product_image&amp;campaignId=amzn1.campaign.68MPXAEHFGC0&amp;linkCode=tr1&amp;tag=latinchain0d-20&amp;linkId=amzn1.campaign.68MPXAEHFGC0_1771337661156" target="_blank" class="btn btn-link amazon-list"><strong>DOOGEE S200 5G Rugged Phone (all-terrain, ultra-resistant) on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
