--- a/website_pinetwork_odoo/views/website_pinetwork_templates_pi_users.xml
+++ b/website_pinetwork_odoo/views/website_pinetwork_templates_pi_users.xml
@@ -900,7 +900,7 @@
                         <t t-if="not pi_user">
                             <span>
                                 <div>
-                                    <strong>None prize will be paid by now, but you can play anytime!. And we are incorporating the price of the market for Pi.</strong>
+                                    <strong>You can play anytime!.</strong>
                                 </div>
                             </span>
                             <br/>
@@ -937,7 +937,7 @@
                             
                             <span>
                                 <div>
-                                    <strong>None prize will be paid by now, but you can play anytime!. And we are incorporating the price of the market for Pi.</strong>
+                                    <strong>You can play anytime!.</strong>
                                 </div>
                             </span>
                             
