--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -470,26 +470,26 @@
                 <html>
                     <head>
                         <meta charset="UTF-8"/>
-                        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-                        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-                        <title>Reading Club</title>
-                        <meta name="apple-mobile-web-app-capable" content="yes" />
-                        <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-                        <meta name="viewport" content="width=device-width, user-scalable=yes"/>
-                        
-                        <meta property="og:title" content="Reading Club"/>
-                        <meta property="og:description" content="Reading Club"/>
-                        <meta property="og:image" content="/website_pinetwork_games_odoo/static/src/img/latin-chain-logo.jpeg"/>
-                        
-                        <link href="/website_pinetwork_games_odoo/static/src/img/latin-chain-logo.jpeg" rel="shortcut icon" />
-                        
-                        <meta name="thumbnail" content="/website_pinetwork_games_odoo/static/src/img/latin-chain-logo.jpeg"/>
-                        
-                        <!-- ios support -->
-                        <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
-                        <meta name="theme-color" content="#db4938" />
-                        
-                        <meta name="application-name" content="Reading Club"/>
+                        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+                        <title>LatinChain Club</title>
+
+                        <link rel="icon" type="img/png" href="https://club.latin-chain.com/images/icon-latinchain-browser.png?v=1.102"/>
+
+                        <meta name="description" content="Discover the LatinChain Club: Your centralized portal for online collectibles clothing in the OpenSource store, and educational books, products and courses in the Club. Shipping worldwide."/>
+                        <meta name="author" content="LatinChain"/>
+
+                        <meta property="og:type" content="website"/>
+                        <meta property="og:url" content="https://club.latin-chain.com"/>
+                        <meta property="og:title" content="LatinChain Club"/>
+                        <meta property="og:description" content="Explore the LatinChain Club. Collectibles clothes, and find educational books, products and courses, all in one place. Shipping worldwide."/>
+                        <meta property="og:image" content="https://club.latin-chain.com/images/og-social-share.png?v=1.103"/>
+                        <meta property="og:site_name" content="LatinChain Club"/>
+
+                        <meta name="twitter:card" content="summary_large_image"/>
+                        <meta name="twitter:title" content="LatinChain Club"/>
+                        <meta name="twitter:description" content="Explore the LatinChain Club: OpenSource fashion store, and educational books, products and courses. Shipping worldwide."/>
+                        <meta name="twitter:image" content="https://club.latin-chain.com/images/og-social-share.png?v=1.103"/>
                         
                         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
                         
