--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -540,8 +540,10 @@
                         </style>
                         
                         <script t-if="shopping">
+                            alert(window.location.pathname);
                             if(window.location.pathname.substring(0, 3) == "/es")
                             {
+                                alert("accessed");
                                 window.location.href="/en"+window.location.pathname.substring(3);
                             }
                         </script>
