--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -788,19 +788,19 @@
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4aCIL19" target="_blank" class="btn btn-link amazon-list"><strong>Deals on Amazon</strong></a>
+                                                <a href="https://amzn.to/4rQQ63W" target="_blank" class="btn btn-link amazon-list"><strong>Deals on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4qA29Sg" target="_blank" class="btn btn-link amazon-list"><strong>Computers and Accessories Deals on Amazon</strong></a>
+                                                <a href="https://amzn.to/4cD9WeJ" target="_blank" class="btn btn-link amazon-list"><strong>Computers and Accessories Deals on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4qAnISU" target="_blank" class="btn btn-link amazon-list"><strong>Electronic Deals on Amazon</strong></a>
+                                                <a href="https://amzn.to/4rXRp16" target="_blank" class="btn btn-link amazon-list"><strong>Electronic Deals on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/3OdrLHb" target="_blank" class="btn btn-link amazon-list"><strong>Cellphones and Accessories Deals on Amazon</strong></a>
+                                                <a href="https://amzn.to/3OPdv7G" target="_blank" class="btn btn-link amazon-list"><strong>Cellphones and Accessories Deals on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
