--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -779,6 +779,14 @@
                                             </div>
                                             <div class="product">
                                                 <hr/>
+                                                <a href="https://amzn.to/4rKXaQl" target="_blank" class="btn btn-link amazon-list"><strong>Pop on Amazon</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
+                                                <a href="https://amzn.to/46K3nDq" target="_blank" class="btn btn-link amazon-list"><strong>Korean Pop on Amazon</strong></a>
+                                            </div>
+                                            <div class="product">
+                                                <hr/>
                                                 <a href="https://amzn.to/3O9C5jD" target="_blank" class="btn btn-link amazon-list"><strong>Prefabricated Portable Houses on Amazon</strong></a>
                                             </div>
                                             <div class="product">
