--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -779,11 +779,11 @@
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/4rKXaQl" target="_blank" class="btn btn-link amazon-list"><strong>Pop on Amazon</strong></a>
+                                                <a href="https://amzn.to/4rKXaQl" target="_blank" class="btn btn-link amazon-list"><strong>Pop Music on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://amzn.to/46K3nDq" target="_blank" class="btn btn-link amazon-list"><strong>Korean Pop on Amazon</strong></a>
+                                                <a href="https://amzn.to/46K3nDq" target="_blank" class="btn btn-link amazon-list"><strong>Korean Pop Music on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
